  context-menus. (#8200, #9015)
- Groups: fixed an issue reporting IsItemEdited() signal after EndGroup() when
  triggered by some widgets e.g. Checkbox(), Selectable() and many others, which
  cleared ActiveId at the same time as editing. (#9028)
  Note that IsItemDeactivatedAfterEdit() was not affected, only IsItemEdited).
- Debug Tools: fixed DebugTextEncoding() potentially reading out of bounds
  if provided a trailing truncated UTF-8 sequence.
- Backends:
  - GLFW: fixed building on Linux platforms where Wayland headers
    are not available. (#9024, #8969, #8921, #8920) [@jagot]
  - SDL3: fixed Platform_OpenInShellFn() return value (the return value
    was unused in core but might be used by a direct caller). (#9027) [@achabense]
  - Vulkan: added IMGUI_IMPL_VULKAN_VOLK_FILENAME to configure path to
    Volk (default to "volk.h"). (#9008, #7722, #6582, #4854) [@mwlasiuk]
  - WebGPU: update to compile with Dawn and Emscripten's 4.0.10+
    '--use-port=emdawnwebgpu' ports. (#8381, #8898) [@brutpitt, @trbabb]
    When using Emscripten 4.0.10+, backend now defaults to IMGUI_IMPL_WEBGPU_BACKEND_DAWN
    instead of IMGUI_IMPL_WEBGPU_BACKEND_WGPU, if neither are specified.
    (note: examples application were not updated yet)
  - Win32: Revert 1.92.4 change of comparing dwPacketNumber, which prevents
    refreshing accurate gamepad info after focus-out + io.ClearInputKeys(). (#8556)
- Examples:
  - GLFW+WebGPU: removed unnecessary ImGui_ImplWGPU_InvalidateDeviceObjects() call
    during surface resize. (#8381)


-----------------------------------------------------------------------
 VERSION 1.92.4 (Released 2025-10-14)
-----------------------------------------------------------------------

Decorated log and release notes: https://github.com/ocornut/imgui/releases/tag/v1.92.4

Breaking Changes:

- Backends:
  - TreeNode, Selectable, Clipper: commented out legacy names obsoleted in
    1.89.7 (July 2023) and 1.89.9 (Sept 2023):